ui css added pt1

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             
             <div class="logo">
-                <h1>WebDev.Eris.com</h1>
+                <h1>WebDev.Eris.Com</h1>
                 <button>Copy</button>
                 <button>CV</button>
             </div>
@@ -31,9 +31,9 @@
                 <li class="mode"><a href="#"><i class="ri-moon-line theme toggle"></i></a></li>
             </div>
             <ul class="menu">
-                <li><a href="#">Linkedin</a></li>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">Messanger</a></li>
+                <li><a href="#">Linkedin /</a></li>
+                <li><a href="#">Instagram /</a></li>
+                <li><a href="#">Messanger /</a></li>
                 <li class="mode"><a href="#"><i class="ri-moon-line theme toggle"></i></a></li>
             </ul>
         </nav>
@@ -44,11 +44,11 @@
                 </div>
                
                     <h2>Hello, I'm Eris 👋</h2>
-                    <h3>Frontend Developer✌️</h3>
+                    <h2>Frontend Developer✌️</h2>
             </div>
 
             <div class="hero-content">
-                <h1>I design and build modern, responsive web interfaces with clean code and great user experiences.</h1>
+                <h1>I design and build modern, responsive web interfaces with clean code and great UX.</h1>
                 <button>Latest Short <i class="ri-expand-right-line"></i></button>
             </div>          
         </main>
